# apps.home.ug-wifi-efl

./: .gitignore  AUTHORS  CMakeLists.txt  net.wifi-qs.efl  net.wifi-qs.manifest  net.wifi-qs.rule  project.config  wifi-efl-ug.include  wifi-efl-ug.manifest  wifi-efl-ug.xml
debian/: changelog  control  net.wifi-qs.install.in  net.wifi-qs.postinst  rules  wifi-efl-ug.install.in  wifi-efl-ug.postinst
packaging/: wifi-efl-ug.spec
po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  nl_NL.po  (+16 more)
sources/libraries/Common/: common_datamodel.c  common_eap_connect.c  common_generate_pin.c  common_invalid_password.c  common_ip_info.c  common_pswd_popup.c  common_utils.c
sources/libraries/Common/include/: common.h  common_datamodel.h  common_eap_connect.h  common_generate_pin.h  common_invalid_password.h  common_ip_info.h  common_pswd_popup.h  common_utils.h
sources/libraries/WlanManager/EngineManager/: connman-profile-manager.c  connman-request.c  connman-response.c
sources/libraries/WlanManager/EngineManager/include/: connman-profile-manager.h  connman-request.h  connman-response.h
sources/libraries/WlanManager/WlanManager/: connection_manager.c  wlan_connection.c  wlan_manager.c
sources/libraries/WlanManager/WlanManager/include/: connection_manager.h  wlan_connection.h  wlan_manager.h
sources/libraries/WlanManager/wlan-manager/: wlan_manager.c
sources/libraries/WlanManager/wlan-manager/include/: wlan_manager.h
sources/libraries/appcoreWrapper/: appcoreWrapper.c
sources/libraries/appcoreWrapper/include/: appcoreWrapper.h
sources/libraries/i18nManager/: i18nmanager.c
sources/libraries/i18nManager/include/: i18nmanager.h
sources/libraries/settingWrapper/: wifi-setting.c
sources/libraries/settingWrapper/include/: wifi-setting.h
sources/ui-gadget/: CMakeLists.txt  motion_control.c  wifi-efl-UG.c  wifi-ui-list-callbacks.c  wifi-wlan-callbacks.c  winset_popup.c
sources/ui-gadget/edcs/: custom_editfield.edc  setup_wizard.edc  wifi_ug_edj_etc.edc
sources/ui-gadget/include/: motion_control.h  ug_wifi.h  viewer_list.h  viewer_manager.h  wifi-engine-callback.h  wifi-ui-list-callbacks.h  wifi.h  winset_popup.h
sources/ui-gadget/po/: CMakeLists.txt  POTFILES.in  de_DE.po  el_GR.po  en.po  es_ES.po  fr_FR.po  it_IT.po  ja_JP.po  ko_KR.po  nl_NL.po  pt_PT.po  ru_RU.po  tr_TR.po  update-po.sh  zh_CN.po  zh_HK.po  zh_TW.po
sources/ui-gadget/viewers-layout/: popup.c  view_advanced.c  view_detail.c  view_detail_datamodel.c  view_dhcpip.c  view_eap.c  view_ime_hidden.c  view_ime_password.c  view_staticip.c  viewer_manager.c  wifi_viewer_list.c
sources/ui-gadget/viewers-layout/include/: popup.h  view_advanced.h  view_detail.h  view_detail_datamodel.h  view_dhcpip.h  view_eap.h  view_ime_hidden.h  view_ime_password.h  view_staticip.h
sources/wifi-syspopup/: CMakeLists.txt  net.wifi-qs-lite.xml  net.wifi-qs.desktop.in  net.wifi-qs.xml  wifi-syspopup-engine-callback.c  wifi-syspopup.c
sources/wifi-syspopup/edcs/: wifi-syspopup-custom.edc
sources/wifi-syspopup/include/: wifi-syspopup-engine-callback.h  wifi-syspopup.h
sources/wifi-syspopup/po/: CMakeLists.txt  de_DE.po  el_GR.po  en.po  es_ES.po  fr_FR.po  it_IT.po  ja_JP.po  ko_KR.po  nl_NL.po  pt_PT.po  ru_RU.po  tr_TR.po  zh_CN.po  zh_HK.po  zh_TW.po
sources/wifi-syspopup/viewer-popups/: view-alerts.c  view-main.c  view-password.c
sources/wifi-syspopup/viewer-popups/include/: view-alerts.h  view-main.h  view-password.h
tables/: ug-wifi-efl_ChangeableColorTable.xml  ug-wifi-efl_FontInfoTable.xml
